# test-task-python

./: .env.example  .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  setup.cfg
test_task_python/: asgi.py  settings.py  urls.py  views.py  wsgi.py
test_task_python/api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
test_task_python/api/migrations/: 0001_initial.py
test_task_python/templates/: home.html
